--- a/src/lib/editor/styles.scss
+++ b/src/lib/editor/styles.scss
@@ -76,7 +76,7 @@
 
   hr {
     border: none;
-    border-top: 2px solid rgba(#0F172A, 0.1);
+    border-top: 2px solid #0F172A;
     margin: 2rem 0;
   }
 }
