fix: Fix note design

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -75,4 +75,19 @@
   body {
     @apply bg-background text-foreground;
   }
+  h1 {
+    @apply text-4xl font-black;
+  }
+  h2 {
+    @apply text-2xl font-bold;
+  }
+  h3 {
+    @apply text-xl font-bold;
+  }
+  ul {
+    @apply list-disc
+  }
+  ol {
+    @apply list-decimal
+  }
 }
