--- a/src/lib/editor/styles.scss
+++ b/src/lib/editor/styles.scss
@@ -9,39 +9,10 @@
     padding: 0 1rem;
   }
 
-  ul {
-    list-style-type: disc;
-  }
-
-  ol {
-    list-style-type: decimal;
-  }
-
-  h1 {
-    font-size: 2em;
-    margin-top: 0.67em;
-    margin-bottom: 0.67em;
-  }
-
-  h2 {
-    font-size: 1.5em;
-    margin-top: 0.83em;
-    margin-bottom: 0.83em;
-  }
-
-  h3 {
-    font-size: 1.17em;
-    margin-top: 1em;
-    margin-bottom: 1em;
-  }
-
   h1,
   h2,
   h3 {
-    display: block;
-    margin-left: 0;
-    margin-right: 0;
-    font-weight: bold;
+    line-height: 1.1;
   }
 
   code {
@@ -71,7 +42,7 @@
 
   blockquote {
     padding-left: 1rem;
-    border-left: 2px solid rgba(#0F172A, 0.1);
+    border-left: 2px solid #0F172A;
   }
 
   hr {
