fix: Fix css bugs

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -85,9 +85,9 @@
     @apply text-xl font-bold;
   }
   ul {
-    @apply list-disc
+    @apply list-disc;
   }
   ol {
-    @apply list-decimal
+    @apply list-decimal;
   }
 }
