--- a/src/lib/editor/styles.scss
+++ b/src/lib/editor/styles.scss
@@ -55,16 +55,15 @@
 .bubble-menu {
   display: flex;
   background-color: #0F172A;
-  padding: 0.2rem;
   border-radius: 0.3rem;
 
   button {
     border: none;
     background: none;
     color: #FFF;
-    font-size: 0.85rem;
+    font-size: 1rem;
     opacity: 0.6;
-    padding: 0.2rem;
+    padding: 0.1rem 0.5rem;
 
     &:hover,
     &.is-active {
