--- a/src/lib/editor/styles.scss
+++ b/src/lib/editor/styles.scss
@@ -4,15 +4,62 @@
     margin-top: 0.75em;
   }
 
-  ul,
-  ol {
-    padding: 0 1rem;
+  h1 {
+    display: block;
+    font-size: 2em;
+    margin-top: 0.67em;
+    margin-bottom: 0.67em;
+    margin-left: 0;
+    margin-right: 0;
+    font-weight: bold;
   }
 
-  h1,
-  h2,
+  h2 {
+    display: block;
+    font-size: 1.5em;
+    margin-top: 0.83em;
+    margin-bottom: 0.83em;
+    margin-left: 0;
+    margin-right: 0;
+    font-weight: bold;
+  }
+
   h3 {
-    line-height: 1.1;
+    display: block;
+    font-size: 1.17em;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    margin-left: 0;
+    margin-right: 0;
+    font-weight: bold;
+  }
+
+  p {
+    display: block;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  ul {
+    display: block;
+    list-style-type: disc;
+    margin-top: 1em;
+    margin-bottom: 1 em;
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 40px;
+  }
+
+  ol {
+    display: block;
+    list-style-type: decimal;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 40px;
   }
 
   code {
@@ -21,10 +68,13 @@
   }
 
   pre {
+    display: block;
+    font-family: monospace;
+    white-space: pre;
     background: #0F172A;
     color: #FFF;
-    font-family: 'JetBrainsMono', monospace;
-    padding: 0.75rem 1rem;
+    margin: 1em 0;
+    padding: 1rem;
     border-radius: 0.5rem;
 
     code {
@@ -46,9 +96,14 @@
   }
 
   hr {
-    border: none;
-    border-top: 2px solid #0F172A;
-    margin: 2rem 0;
+    display: block;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: inset;
+    border-width: 1px;
+    border-color: #0F172A;
   }
 }
 
