--- a/src/lib/editor/styles.scss
+++ b/src/lib/editor/styles.scss
@@ -110,6 +110,14 @@
     text-decoration: underline;
     cursor: auto;
   }
+
+  p.is-editor-empty:first-child::before {
+    color: #adb5bd;
+    content: attr(data-placeholder);
+    float: left;
+    height: 0;
+    pointer-events: none;
+  }
 }
 
 .bubble-menu {
