--- a/src/lib/editor/styles.scss
+++ b/src/lib/editor/styles.scss
@@ -122,7 +122,7 @@
 
 .bubble-menu {
   display: flex;
-  background-color: #0F172A;
+  background-color: hsl(var(--secondary) / var(--tw-bg-opacity));
   border-radius: 0.3rem;
 
   button {
