feat: Apply lucide icons on menu (#2)

--- a/src/lib/editor/styles.scss
+++ b/src/lib/editor/styles.scss
@@ -122,30 +122,5 @@
 
 .bubble-menu {
   display: flex;
-  background-color: hsl(240 10% 3.9%);
-  border-radius: 0.3rem;
-
-  button {
-    border: none;
-    background: none;
-    color: #FFF;
-    font-size: 1rem;
-    opacity: 0.6;
-    padding: 0.1rem 0.5rem;
-
-    &:hover,
-    &.is-active {
-      opacity: 1;
-    }
-  }
-}
-
-.dark {
-  .bubble-menu {
-    background-color: hsl(0 0% 100%);
-
-    button {
-      color: hsl(240 10% 3.9%);
-    }
-  }
+  background-color: hsl(var(--secondary) / var(--tw-bg-opacity));
 }
