fix: Fix code block bug

--- a/src/lib/editor/styles.scss
+++ b/src/lib/editor/styles.scss
@@ -71,7 +71,7 @@
   pre {
     display: block;
     font-family: monospace;
-    white-space: pre;
+    white-space: pre-wrap;
     background: rgba(#616161, 0.1);
     color: #616161;
     margin: 1em 0;
