--- a/src/lib/editor/styles.scss
+++ b/src/lib/editor/styles.scss
@@ -107,8 +107,13 @@
   }
 
   a:link {
+    text-decoration: none;
+    color: 	#1e90ff;
+  }
+
+  a:link:hover {
     text-decoration: underline;
-    cursor: auto;
+    cursor: pointer;
   }
 
   p.is-editor-empty:first-child::before {
