fix: Fix link css bug

--- a/src/lib/editor/styles.scss
+++ b/src/lib/editor/styles.scss
@@ -106,12 +106,12 @@
     border-color: #616161;
   }
 
-  a:link {
+  a {
     text-decoration: none;
-    color: 	#1e90ff;
+    color: #1e90ff;
   }
 
-  a:link:hover {
+  a:hover {
     text-decoration: underline;
     cursor: pointer;
   }
