fix: Adjust ul and ol left padding size

--- a/src/lib/editor/styles.scss
+++ b/src/lib/editor/styles.scss
@@ -46,10 +46,10 @@
     display: block;
     list-style-type: disc;
     margin-top: 1em;
-    margin-bottom: 1 em;
+    margin-bottom: 1em;
     margin-left: 0;
     margin-right: 0;
-    padding-left: 40px;
+    padding-left: 1.3rem;
   }
 
   ol {
@@ -59,7 +59,7 @@
     margin-bottom: 1em;
     margin-left: 0;
     margin-right: 0;
-    padding-left: 40px;
+    padding-left: 1.3rem;
   }
 
   code {
